ops/terraform/compute/app/main.tf
variable "name" { default = "app" }
variable "azs" {}
variable "vpc_id" {}
variable "vpc_cidr" {}
variable "public_subnet_ids" {}
variable "private_subnet_ids" {}
variable "domain" {}
variable "ssl_cert_crt" {}
variable "ssl_cert_key" {}
variable "key_name" {}
variable "key_path" {}
variable "email_from" {}
variable "smtp_id" {}
variable "smtp_password" {}

variable "consul_client_user_data" {}
variable "atlas_username" {}
variable "atlas_environment" {}
variable "atlas_token" {}
variable "consul_ips" {}

variable "pg_endpoint" {}
variable "pg_username" {}
variable "pg_password" {}
variable "pg_name" {}

variable "redis_host" {}
variable "redis_port" {}
variable "redis_password" {}

variable "rabbitmq_host" {}
variable "rabbitmq_port" {}
variable "rabbitmq_username" {}
variable "rabbitmq_password" {}
variable "rabbitmq_vhost" {}

variable "statsite_address" {}

variable "bastion_host" {}
variable "bastion_user" {}
variable "vault_private_ip" {}
variable "vault_domain" {}

variable "instance_type" {}
variable "blue_ami" {}
variable "blue_nodes" {}
variable "green_ami" {}
variable "green_nodes" {}

resource "aws_security_group" "elb" {
  name        = "${var.name}.elb"
  vpc_id      = "${var.vpc_id}"
  description = "Security group for App ELB"

  tags { Name = "${var.name}-elb" }

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 8080
    to_port     = 8080
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 443
    to_port     = 443
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = -1
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_iam_server_certificate" "app" {
  name             = "${var.name}"
  certificate_body = "${file("${var.ssl_cert_crt}")}"
  private_key      = "${file("${var.ssl_cert_key}")}"

  provisioner "local-exec" {
    command = <<EOF
      echo "Sleep 10 secends so that mycert is propagated by aws iam service"
      echo "See https://github.com/hashicorp/terraform/issues/2499 (terraform ~v0.6.1)"
      sleep 10
EOF
  }
}

resource "aws_elb" "app" {
  name                        = "${var.name}"
  connection_draining         = true
  connection_draining_timeout = 400

  subnets             = ["${split(",", var.public_subnet_ids)}"]
  security_groups     = ["${aws_security_group.elb.id}"]

  listener {
    lb_port           = 80
    lb_protocol       = "http"
    instance_port     = 80
    instance_protocol = "http"
  }

  listener {
    lb_port           = 8080
    lb_protocol       = "http"
    instance_port     = 8080
    instance_protocol = "http"
  }

  listener {
    lb_port            = 443
    lb_protocol        = "https"
    instance_port      = 80
    instance_protocol  = "http"
    ssl_certificate_id = "${aws_iam_server_certificate.app.arn}"
  }

  health_check {
    healthy_threshold   = 2
    unhealthy_threshold = 3
    timeout             = 10
    interval            = 15
    target              = "HTTP:80/"
  }
}

resource "aws_security_group" "lc" {
  name        = "${var.name}.lc"
  vpc_id      = "${var.vpc_id}"
  description = "Security group for App Launch Configuration"

  tags { Name = "${var.name}-lc" }

  ingress {
    protocol    = -1
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["${var.vpc_cidr}"]
  }

  egress {
    protocol    = -1
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "template_file" "consul_user_data_blue" {
  filename = "${var.consul_client_user_data}"

  vars {
    atlas_username    = "${var.atlas_username}"
    atlas_environment = "${var.atlas_environment}"
    atlas_token       = "${var.atlas_token}"
    node_name         = "${var.name}-blue"
    service           = "${var.name}"
  }
}

resource "aws_launch_configuration" "blue" {
  image_id        = "${var.blue_ami}"
  instance_type   = "${var.instance_type}"
  key_name        = "${var.key_name}"
  security_groups = ["${aws_security_group.lc.id}"]
  user_data       = "${template_file.consul_user_data_blue.rendered}"

  # lifecycle { create_before_destroy = true }
}

resource "aws_autoscaling_group" "blue" {
  name                 = "${var.name}.blue"
  launch_configuration = "${aws_launch_configuration.blue.name}"
  desired_capacity     = "${var.blue_nodes}"
  min_size             = "${var.blue_nodes}"
  max_size             = "${var.blue_nodes}"
  min_elb_capacity     = "${var.blue_nodes}"
  availability_zones   = ["${split(",", var.azs)}"]
  vpc_zone_identifier  = ["${split(",", var.private_subnet_ids)}"]
  load_balancers       = ["${aws_elb.app.id}"]

  # lifecycle { create_before_destroy = true }

  tag {
    key   = "Name"
    value = "${var.name}.blue"
    propagate_at_launch = true
  }
}

resource "template_file" "consul_user_data_green" {
  filename = "${var.consul_client_user_data}"

  vars {
    atlas_username      = "${var.atlas_username}"
    atlas_environment   = "${var.atlas_environment}"
    atlas_token         = "${var.atlas_token}"
    node_name           = "${var.name}-green"
    service             = "${var.name}"
  }
}

resource "aws_launch_configuration" "green" {
  image_id        = "${var.green_ami}"
  instance_type   = "${var.instance_type}"
  key_name        = "${var.key_name}"
  security_groups = ["${aws_security_group.lc.id}"]
  user_data       = "${template_file.consul_user_data_green.rendered}"

  # lifecycle { create_before_destroy = true }
}

resource "aws_autoscaling_group" "green" {
  name                 = "${var.name}.green"
  launch_configuration = "${aws_launch_configuration.green.name}"
  desired_capacity     = "${var.green_nodes}"
  min_size             = "${var.green_nodes}"
  max_size             = "${var.green_nodes}"
  min_elb_capacity     = "${var.green_nodes}"
  availability_zones   = ["${split(",", var.azs)}"]
  vpc_zone_identifier  = ["${split(",", var.private_subnet_ids)}"]
  load_balancers       = ["${aws_elb.app.id}"]

  # lifecycle { create_before_destroy = true }

  tag {
    key   = "Name"
    value = "${var.name}.green"
    propagate_at_launch = true
  }
}

resource "null_resource" "vault_setup" {
  provisioner "remote-exec" {
    connection {
      user         = "ubuntu"
      host         = "${var.vault_private_ip}"
      key_file     = "${var.key_path}"
      bastion_host = "${var.bastion_host}"
      bastion_user = "${var.bastion_user}"
    }

    inline = [ <<COMMANDS
#!/bin/bash
set -e

# Join Consul cluster
consul join ${replace(var.consul_ips, ",", " ")}

# Wait for Vault to become ready
SLEEPTIME=1
cget() { curl -sf "http://127.0.0.1:8500/v1/kv/service/vault/$1?raw"; }

while ! cget ready | grep "true"; do
  if [ $SLEEPTIME -gt 24 ]; then
    echo "ERROR: VAULT SETUP NOT COMPLETE! Manual intervention required."
    exit 2
  else
    echo "Blocking until Vault is ready, waiting $SLEEPTIME second(s)..."
    sleep $SLEEPTIME
    ((SLEEPTIME+=1))
  fi
done

echo "Authenticating as root..."
cget root-token | vault auth -

echo "Adding app policy..."
(cat <<POLICY
# Allow renewal of leases for secrets
path "sys/renew/*" {
  policy = "write"
}

# Allow renewal of token leases
path "auth/token/renew/*" {
  policy = "write"
}

path "transit/encrypt/${var.name}_*" {
  policy = "write"
}

path "transit/decrypt/${var.name}_*" {
  policy = "write"
}
POLICY
) > /tmp/${var.name}-policy.hcl

echo "Writing Vault policy..."
vault policy-write ${var.name} /tmp/${var.name}-policy.hcl

echo "Creating Vault token..."
TOKEN=$(vault token-create -policy=${var.name} | grep ^token[^_] | awk '{print $2}')

echo "Saving Vault token to Consul"
curl -XPUT http://127.0.0.1:8500/v1/kv/service/${var.name}/vault-token -d $TOKEN

if [ -e ~/.vault-token ]; then
  echo "Shredding vault-token"
  shred -u -z ~/.vault-token
fi
COMMANDS ]
  }
}

output "remote_commands" {
  value = <<COMMANDS
  curl -XPUT http://127.0.0.1:8500/v1/kv/service/${var.name}/vault-addr -d 'https://${var.vault_domain}'
  (cat <<EOF
AMQP_URL='amqp://${var.rabbitmq_username}:${var.rabbitmq_password}@${var.rabbitmq_host}:${var.rabbitmq_port}/${var.rabbitmq_vhost}'
ANALYTICS_ENABLED='1'
ASSET_HOST=''
BASE_DOMAIN='${var.domain}'
DATABASE_URL='postgres://${var.pg_username}:${var.pg_password}@${var.pg_endpoint}/${var.pg_name}'
GRAPHITE_HOST='${element(split(":", var.statsite_address), 0)}'
GRAPHITE_PORT='${element(split(":", var.statsite_address), 1)}'
MAILER_AUTH='login'
MAILER_DEFAULT_URL='https://${var.domain}'
MAILER_HOST='email-smtp.us-east-1.amazonaws.com'
MAILER_SENDER='${var.email_from}'
MAILER_USERNAME='${var.smtp_id}'
MAILER_PASSWORD='${var.smtp_password}'
PRETTY_URL='https://${var.domain}'
ENV='${var.name}'
PGBACKUPS_URL=''
REDIS_URL='redis://:${var.redis_password}@${var.redis_host}:${var.redis_port}'
SENTRY_DSN=''
SENTRY_FRONTEND_DSN=''
VAULT_APP='${var.name}'
VAULT_ADDR=''
VAULT_TOKEN=''
EOF
) | curl -X PUT 127.0.0.1:8500/v1/kv/service/${var.name}/env --data-binary @-
COMMANDS
}

output "dns_name" { value = "${aws_elb.app.dns_name}" }
output "zone_id"  { value = "${aws_elb.app.zone_id}" }
